...
        ],
        const SizedBox(height: 24),
        FilledButton.tonal(
          key: TodosKeys.detailsToggleButton,
          onPressed: cubit.toggleCompleted,
          child: Text(
            todo.completed ? 'Mark as active' : 'Mark as completed',
          ),
        ),
        const SizedBox(height: 12),
        OutlinedButton(
          key: TodosKeys.detailsDeleteButton,
          onPressed: cubit.delete,
...
